--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -36,7 +36,7 @@
                 </section>
 
                 <section class="p_button">
-                    <a href="{{ url_for('predict') }}">Predict</a>   
+                    <a href="{{ url_for('predict_datapoint') }}">Predict</a>   
                 </section>
 
                 <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
